--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,11 @@ body {
   align-items: center;
   justify-content: center;
 }
+@media (max-width: 470px) {
+  body {
+    padding: 0 1em;
+  }
+}
 
 .calculator {
   --spacing: 0.55em;
